tried to fix the responsiveness issue with the images and the macbook png overlap

--- a/src/components/Laptop.scss
+++ b/src/components/Laptop.scss
@@ -13,57 +13,35 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  // @media(min-resolution: 192dpi) and (min-width: 400px) {
-  //   background-image: url('../assets/img/macbook-47638.png');
-  // }
-}
-
-.image-bg {
-  display: block;
-  height: 71%;
-  width: 60.5%;
-  z-index: 10000;
-  top: 49%;
-  left: 49%;
-  // top: 50%;
-  // left: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-
-  // @include respond(big-desktop) {
-  //   height: 71%;
-  //   width: 60.5%;
-  // }
-
-  @media only screen and (max-width: 991.98px) {
-    width: 68%;
-    height: 72%;
-  };
-
-  @include respond(tab-port) {
-    width: 67%;
-    height: 71%;
+  @media (max-width: 1720px) {
+    width: 80%;
+    height: 80%;
   }
 
-  @media only screen and (max-width: 767.98px) {
-    width: 70%;
-    height: 68%;
-  };
-
-  @include respond(phone) {
-    width: 70%;
-    height: 68%;
+  @media (max-width: 1680px) {
+    width: 75%;
+    height: 75%;
   }
 
-  @media only screen and (max-width: 575.98px) {
+  @media (max-width: 1582px) {
     width: 70%;
-    height: 64%;
-  };
+    height: 70%;
+  }
 
-  @media only screen and (max-width: 320px) {
-    width: 70%;
-    height: 47%;
-  };
+  @media (max-width: 1470px) {
+    width: 65%;
+    height: 65%;
+  }
+
+  @media (max-width: 1270px) {
+    width: 60%;
+    height: 60%;
+  }
+
+  @media (max-width: 1070px) {
+    width: 55%;
+    height: 55%;
+  }
 }
 
 .app-image {
@@ -73,4 +51,69 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  @media (max-width: 1870px) {
+    width: 60%;
+    left: 49%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1810px) {
+    width: 61%;
+    left: 49%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1800px) {
+    width: 45%;
+    left: 49.75%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1760px) {
+    width: 47.5%;
+    left: 49.5%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1702px) {
+    width: 47.5%;
+    left: 49.5%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1685px) {
+    width: 51.5%;
+    left: 49.5%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1582px) {
+    width: 54%;
+    left: 49.5%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1455px) {
+    width: 60%;
+    left: 49.5%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1320px) {
+    width: 70%;
+    left: 49.5%;
+    height: 72.5%;
+  }
+
+  @media (max-width: 1296px) {
+    width: 52%;
+    left: 49.5%;
+    height: 72.5%;
+  }
+  @media (max-width: 1100px) {
+    width: 65.5%;
+    left: 49.5%;
+    height: 72.5%;
+  }
 }
